fix: dark mode issues

--- a/frontend/src/pages/Home/Welcome/TextGradientHighlight.css
+++ b/frontend/src/pages/Home/Welcome/TextGradientHighlight.css
@@ -1,22 +1,3 @@
-.container {
-  line-height: 1.4;
-  text-align: center;
-  padding: 44px;
-  color: #333;
-}
-
-h1 {
-  font-size: 50px;
-}
-
-p {
-  font-size: 18px;
-}
-p small {
-  font-size: 80%;
-  color: #666;
-}
-
 .highlight-container,
 .highlight {
   position: relative;
@@ -42,20 +23,8 @@ p small {
 }
 
 .highlightsubtext {
-  background-image: linear-gradient(to right, #fcd400, #fce055, #fff);
-  border-radius: 6px;
+  color: black;
   padding: 3px 6px;
-}
-
-body {
-  background-color: #fff;
-}
-
-p {
-  color: #000;
-  text-align: center;
-  font-family: sans-serif;
-  letter-spacing: 2px;
-  padding: 20px 0;
-  font-size: 20px;
+  border-radius: 6px;
+  background-image: linear-gradient(to right, #fcd400, #fce055, #fff);
 }
